# solidity

./: CMakeLists.txt  Changelog.md
docs/: control-structures.rst  types.rst
libdevcore/: CMakeLists.txt
libevmasm/: CMakeLists.txt
liblangutil/: CMakeLists.txt
liblll/: CMakeLists.txt
libsolidity/analysis/: TypeChecker.cpp
libsolidity/codegen/: ContractCompiler.cpp  ExpressionCompiler.cpp
libsolidity/inlineasm/: AsmParser.h
libsolidity/interface/: AssemblyStack.cpp  AssemblyStack.h
libyul/: YulObjectParser.cpp  YulObjectParser.h
libyul/backends/evm/: AbstractAssembly.h  EVMAssembly.h
test/libsolidity/: SolidityEndToEndTest.cpp
